--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -16,6 +16,8 @@ image:
   repository: nodeappsrinshad.azurecr.io/test-imagess-2    ###rinshad11/nodeapp00
   tag: xxlatestxx
   pullPolicy: Always
+  pullSecrets:
+    - name: dc-2fjvj
 
 service:
   type: ClusterIP
