--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -16,11 +16,9 @@ image:
   repository: nodeappsrinshad.azurecr.io/test-imagess-2    ###rinshad11/nodeapp00
   tag: xxlatestxx
   pullPolicy: Always
-  pullSecrets:
-    - name: dc-2fjvj
-
+  
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 3000
 
 ingress:
