--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -1,4 +1,4 @@
-## Default values for tmf635-usage.######################
+## Default values for tmf635-usage.###################uu
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
