--- a/helm/chart/templates/hpa.yaml
+++ b/helm/chart/templates/hpa.yaml
@@ -2,13 +2,13 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ .Chart.Name }}-hpa
+  name: {{ .tmf635-usage.Name }}-hpa
 spec:
   maxReplicas: {{ .Values.hpa.maxReplicas }}
   minReplicas: {{ .Values.hpa.minReplicas }}
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ .Chart.Name }}-deployment
+    name: {{ .tmf635-usage.Name }}-deployment
   targetCPUUtilizationPercentage: {{ .Values.hpa.targetCPUUtilizationPercentage }}
 {{- end }}
