--- a/helm/chart/templates/deployment.yaml
+++ b/helm/chart/templates/deployment.yaml
@@ -22,6 +22,9 @@ spec:
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          env:
+          - name: {{ .Values.env.name }}
+            value: {{ .Values.env.value }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
