updated workflow file to eks

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,9 +42,27 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
         IMAGE_TAG: ${{ steps.commit.outputs.short }}
       run: |
+        echo $IMAGE_TAG
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/ .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+    
+    - name: Install Pritunl VPN
+      run: |
+          sudo tee /etc/apt/sources.list.d/pritunl.list << EOF
+          deb https://repo.pritunl.com/stable/apt jammy main
+          EOF
+    
+          sudo apt --assume-yes install gnupg
+          gpg --keyserver hkp://keyserver.ubuntu.com --recv-keys 7568D9BB55FF9E5287D586017AE645C0CF8E292A
+          gpg --armor --export 7568D9BB55FF9E5287D586017AE645C0CF8E292A | sudo tee /etc/apt/trusted.gpg.d/pritunl.asc
+          sudo apt update
+          sudo apt install pritunl-client-electron
 
+    - name: Connect VPN
+      run: |
+          pritunl-client add ./user-2.tar
+          pritunl-client start "$(pritunl-client list | awk 'NR>2 {print $2}' | tr -d '[:space:]')" --password ${{ secrets.PRITUNL_PIN }} 
+        
     - name: Update kube config
       run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
 
