--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -45,7 +45,7 @@ jobs:
         echo $IMAGE_TAG
         pwd
         ls
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     
     - name: Install Pritunl VPN
