--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,7 +3,8 @@ name: Deploy to ECR
 on:
  
   push:
-    branches: [ main ]
+    tags:
+      - "*"
 
 env:
   ECR_REPOSITORY: repo-dev
@@ -40,9 +41,11 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
-        IMAGE_TAG: ${{ steps.commit.outputs.short }}
+        # IMAGE_TAG: ${{ steps.commit.outputs.short }}
+        IMAGE_TAG2: $(git describe --exact-match --tags $(git log -n1 --pretty='%h'))
       run: |
-        echo $IMAGE_TAG
+        echo $IMAGE_TAG2
+        echo 
         pwd
         ls
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
@@ -73,7 +76,4 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
         IMAGE_TAG: ${{ steps.commit.outputs.short }}
       run: |
-        # sed -i.bak "s|DOCKER_IMAGE|$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG|g" manifests/hello-app-deployment.yaml && \
-        # kubectl apply -f manifests/hello-app-deployment.yaml
-        # kubectl apply -f manifests/hello-app-service.yaml
         helm upgrade --install nodeapp-33 helm/chart/ --set image.tag=$IMAGE_TAG
