--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -19,7 +19,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
+      
+    
     - name: Set short git commit SHA
       id: commit
       uses: prompt/actions-commit-hash@v2
@@ -38,11 +39,19 @@ jobs:
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
 
+    - name: image tag
+      run: |
+        IMAGE_TAG2=$(git describe --exact-match --tags $(git log -n1 --pretty='%h'))
+        echo "IMAGE_TAG2=$IMAGE_TAG2" >> $GITHUB_ENV
+        echo $IMAGE_TAG2
+     
+      
+        
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
         # IMAGE_TAG: ${{ steps.commit.outputs.short }}
-        IMAGE_TAG2: $(git describe --exact-match --tags $(git log -n1 --pretty='%h'))
+        # IMAGE_TAG2: $(git describe --exact-match --tags $(git log -n1 --pretty='%h'))
       run: |
         echo $IMAGE_TAG2
         echo 
