--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -68,8 +68,6 @@ jobs:
     - name: Update kube config
       run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
 
-    - name: Deploy to EKS
-      # env:
-      #   ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}        
+    - name: Deploy to EKS       
       run: |
-        helm upgrade --install nodeapp-33 helm/chart/ --set image.tag=$IMAGE_TAG
+        helm upgrade --install nodeapp-33 helm/chart/ -n dev --set image.tag=$IMAGE_TAG
