--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -25,13 +25,13 @@ service:
   port: 3000
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  path: /
-  hosts:
-    - chart-example.local
+  path: /app
+  # hosts:
+  #   - chart-example.local
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
