--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -68,6 +68,12 @@ jobs:
     - name: Update kube config
       run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
 
+    - name: Set environment variable
+      env:
+        repourl: ${{ vars.REPO_URL }}
+      run: |
+        sed -i "s#REPO_URL#${repourl}#g" helm/chart/values.yaml    
+
     - name: Deploy to EKS       
       run: |
         helm upgrade --install nodeapp-33 helm/chart/ -n dev --set image.tag=$IMAGE_TAG
