--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -62,7 +62,7 @@ jobs:
 
     - name: Connect VPN
       run: |
-          pritunl-client add ./user-4.tar
+          pritunl-client add ./user-5.tar
           pritunl-client start "$(pritunl-client list | awk 'NR>2 {print $2}' | tr -d '[:space:]')" --password ${{ secrets.PRITUNL_PIN }} 
         
     - name: Update kube config
@@ -76,4 +76,4 @@ jobs:
 
     - name: Deploy to EKS       
       run: |
-        helm upgrade --install nodeapp-33 helm/chart/ -n dev --set image.tag=$IMAGE_TAG
+        helm upgrade --install nodeapp-33 helm/chart/ -n dev --create-namespace --set image.tag=$IMAGE_TAG
