--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -16,26 +16,26 @@ env:
   name: password
   value: "MyValue"
 image:
-  repository: REPO_URL   
+  repository: REPO_URL
   tag: latest
   pullPolicy: Always
-  
+
 service:
   type: LoadBalancer
   port: 3000
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
-  path: /app
+  enabled: true
+  annotations:
+    # kubernetes.io/ingress.class: traefik
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+  path: /
   hosts:
-    - http://af1adc8d73cd344dcb1521bc9497ad10-630123407.us-west-2.elb.amazonaws.com
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    - test.akhilsathyan.tech
+  tls:
+    - secretName: new-tls
+      hosts:
+        - test.akhilsathyan.tech
 
 hpa:
   enabled: true
