--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -27,7 +27,7 @@ service:
 ingress:
   enabled: true
   annotations:
-    # kubernetes.io/ingress.class: traefik
+    kubernetes.io/ingress.class: traefik
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   path: /
   hosts:
