--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -66,8 +66,10 @@ jobs:
           pritunl-client start "$(pritunl-client list | awk 'NR>2 {print $2}' | tr -d '[:space:]')" --password ${{ secrets.PRITUNL_PIN }} 
         
     - name: Update kube config
-      run: aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
-
+      run: |
+        aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
+        kubectl version
+        
     - name: Set environment variable
       env:
         repourl: ${{ vars.REPO_URL }}
