--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -26,6 +26,7 @@ service:
 
 ingress:
   enabled: true
+  ingressClassName: traefik
   annotations:
     kubernetes.io/ingress.class: traefik
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
