--- a/helm/chart/values.yaml
+++ b/helm/chart/values.yaml
@@ -28,7 +28,7 @@ ingress:
   enabled: true
   ingressClassName: traefik
   annotations:
-    kubernetes.io/ingress.class: traefik
+    # kubernetes.io/ingress.class: traefik
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
   path: /
   hosts:
