--- a/.github/workflows/deployment-prod.yml
+++ b/.github/workflows/deployment-prod.yml
@@ -35,7 +35,7 @@ jobs:
 
     - name: image tag
       run: |
-        IMAGE_TAG=$(git describe --exact-match --tags $(git log -n1 --pretty='%h'))
+        IMAGE_TAG=$(git describe --exact-match --tags $(git log -n1 --pretty='%h' main))
         echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
         echo $IMAGE_TAG
       
