--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -50,6 +50,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
           IMAGE_TAG=$(echo ${{ github.run_number }})-${{ steps.determine-version.outputs.version }}
+          test= echo ${{ github.run_number }}
           echo $ECR_REGISTRY
           echo $IMAGE_TAG
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
