semantic version test-BREAKING CHANGE

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -49,12 +49,11 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         run: |
-          IMAGE_TAG=$(echo ${{ github.run_number }})-${{ steps.determine-version.outputs.version }}
-          test= echo ${{ github.run_number }}
+          VERSION=$(echo ${{ steps.determine-version.outputs.version }})
+          # Generate a tag in the format v0.0.0
+          IMAGE_TAG="v0.0.${{ github.run_number }}-${VERSION}"
           echo $ECR_REGISTRY
-          echo $IMAGE_TAG
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
       
       # Continue with the remaining steps as per your workflow
-####
