--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -65,7 +65,7 @@ jobs:
           UPDATE=$(echo ${{ steps.determine-update.outputs.update }})
 
           # Determine the current version
-          CURRENT_VERSION=$(curl -sL https://api.github.com/repos/USERNAME/REPO/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
+          CURRENT_VERSION=$(curl -sL https://github.com/rinshad1/nodejs-test-application.git | grep -oP '"tag_name": "\K(.*)(?=")')
 
           # Parse the version numbers
           IFS='.' read -r -a VERSION_ARRAY <<< "$CURRENT_VERSION"
