semantic version test

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -67,7 +67,7 @@ jobs:
           # Determine the current version
           #CURRENT_VERSION=0.0.0
           CURRENT_VERSION=$(curl -sL https://api.github.com/repos/USERNAME/REPO/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')
-
+          echo "$CURRENT_VERSION"
           # Parse the version numbers
           IFS='.' read -r -a VERSION_ARRAY <<< "$CURRENT_VERSION"
           MAJOR=${VERSION_ARRAY[0]}
