--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -85,10 +85,10 @@ jobs:
             PATCH=$((PATCH + 1))
           fi
 
-          # Generate the new version
-          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-          echo "$NEW_VERSION" > VERSION
-          echo "::set-output name=new_version::$NEW_VERSION"
+          # # Generate the new version
+          # NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          # echo "$NEW_VERSION" > VERSION
+          # echo "::set-output name=new_version::$NEW_VERSION"
 
       - name: Build, tag, and push image to Amazon ECR
         env:
