semantic version test-feat

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -30,10 +30,16 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Read Current Version from VERSION file
+      - name: Read Current Version from ECR repo images
         id: read-version
-        run: echo "::set-output name=version::$(cat VERSION)"
-
+        run: |
+          # Get the latest image tag from the ECR repository
+          VERSION=$(aws ecr describe-images --repository-name $ECR_REPOSITORY --region $AWS_REGION --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' --output text)
+          echo "::set-output name=version::$VERSION"
+        env:
+          AWS_REGION: ${{ env.AWS_REGION }}
+          ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
+      
       - name: Determine semantic version
         id: determine-version
         run: |
@@ -101,19 +107,19 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
-      - name: Retrieve Latest Release ID
-        id: get-release-id
-        run: |
-          RELEASE_ID=$(curl -sL https://api.github.com/repos/rinshad1/nodejs-test-application/releases/latest | grep -oP '"id": \K[0-9]+')
-          echo "::set-output name=release-id::$RELEASE_ID"
+      # - name: Retrieve Latest Release ID
+      #   id: get-release-id
+      #   run: |
+      #     RELEASE_ID=$(curl -sL https://api.github.com/repos/rinshad1/nodejs-test-application/releases/latest | grep -oP '"id": \K[0-9]+')
+      #     echo "::set-output name=release-id::$RELEASE_ID"
         
-      - name: Update Release Tag
-        run: |
-          RELEASE_ID=${{ steps.get-release-id.outputs.release-id }}
-          NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
-          curl -X PATCH -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -d '{"tag_name": "'"$NEW_TAG"'"}' \
-            "https://api.github.com/repos/rinshad1/nodejs-test-application/releases/$RELEASE_ID"
+      # - name: Update Release Tag
+      #   run: |
+      #     RELEASE_ID=${{ steps.get-release-id.outputs.release-id }}
+      #     NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+      #     curl -X PATCH -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+      #       -d '{"tag_name": "'"$NEW_TAG"'"}' \
+      #       "https://api.github.com/repos/rinshad1/nodejs-test-application/releases/$RELEASE_ID"
                   
       # Continue with the remaining steps as per your workflow
 #
