semantic version test

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -91,6 +91,11 @@ jobs:
             PATCH=$((PATCH + 1))
           fi
 
+          # Generate the new version
+          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          echo "$NEW_VERSION" > VERSION
+          echo "::set-output name=new_version::$NEW_VERSION"
+
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
