--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -92,7 +92,7 @@ jobs:
           fi
 
           # Generate the new version
-          NEW_VERSION="${MAJOR}.${MINOR}.${PATCH}"
+          NEW_VERSION="v${MAJOR}.${MINOR}.${PATCH}"
           echo "$NEW_VERSION" > VERSION
           echo "::set-output name=new_version::$NEW_VERSION"
 
