--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,51 +1,48 @@
-name: Deploy to PRODUCTION EKS
+name: Deploy to DEVELOPMENT EKS
 
 on:
-    pull_request:
-      branches:
-      - prod
+  push:
+    branches:
+      - main
 
 env:
-  ECR_REPOSITORY: repo-prod
+  ECR_REPOSITORY: repo-dev
   EKS_CLUSTER_NAME: eks-cluster-123 
   AWS_REGION: us-west-2
 
 jobs:
-  
   build:
-    
     name: Deployment
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out code
+        uses: actions/checkout@v2
       
-    - name: Check out code
-      uses: actions/checkout@v2
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{env.AWS_REGION}}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-    - name: Read Current Version from ECR repo images
-      id: read-version
-      run: |
+      - name: Read Current Version from ECR repo images
+        id: read-version
+        run: |
           # Get the latest image tag from the ECR repository
           VERSION=$(aws ecr describe-images --repository-name $ECR_REPOSITORY --region $AWS_REGION --query 'sort_by(imageDetails,& imagePushedAt)[-1].imageTags[0]' --output text)
           echo "::set-output name=version::$VERSION"
-      env:
+        env:
           AWS_REGION: ${{ env.AWS_REGION }}
           ECR_REPOSITORY: ${{ env.ECR_REPOSITORY }}
       
-    - name: Determine semantic version
-      id: determine-version
-      run: |
+      - name: Determine semantic version
+        id: determine-version
+        run: |
           # Extract commit message from the latest commit
           COMMIT_MESSAGE=$(git log -1 --pretty=%B)
 
@@ -58,9 +55,9 @@ jobs:
             echo "::set-output name=version::patch"
           fi
 
-    - name: Determine version update
-      id: determine-update
-      run: |
+      - name: Determine version update
+        id: determine-update
+        run: |
           VERSION=$(echo ${{ steps.determine-version.outputs.version }})
           if [ "$VERSION" = "major" ]; then
             echo "::set-output name=update::major"
@@ -70,10 +67,10 @@ jobs:
             echo "::set-output name=update::patch"
           fi
 
-    - name: Update Version
-      id: update-version
-      run: |
-          CURRENT_VERSION="v1.0.2"    #$(echo ${{ steps.read-version.outputs.version }})
+      - name: Update Version
+        id: update-version
+        run: |
+          CURRENT_VERSION=$(echo ${{ steps.read-version.outputs.version }})
           VERSION_TYPE=$(echo ${{ steps.determine-version.outputs.version }})
 
           # Parse the version numbers
@@ -99,10 +96,10 @@ jobs:
           echo "$NEW_VERSION" > VERSION
           echo "::set-output name=new_version::$NEW_VERSION"
 
-    - name: Build, tag, and push image to Amazon ECR
-      env:
+      - name: Build, tag, and push image to Amazon ECR
+        env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      run: |
+        run: |
           VERSION=$(echo ${{ steps.update-version.outputs.new_version }})
           UPDATE=$(echo ${{ steps.determine-update.outputs.update }})
 
@@ -110,8 +107,8 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Application/Dockerfile .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     
-    - name: Install Pritunl VPN
-      run: |
+      - name: Install Pritunl VPN
+        run: |
           sudo tee /etc/apt/sources.list.d/pritunl.list << EOF
           deb https://repo.pritunl.com/stable/apt jammy main
           EOF
@@ -122,22 +119,21 @@ jobs:
           sudo apt update
           sudo apt install pritunl-client-electron
 
-    - name: Connect VPN
-      run: |
+      - name: Connect VPN
+        run: |
           pritunl-client add ./user-13.tar
           pritunl-client start "$(pritunl-client list | awk 'NR>2 {print $2}' | tr -d '[:space:]')" --password ${{ secrets.PRITUNL_PIN }} 
         
-    - name: Update kube config
-      run: |
-        aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
+      - name: Update kube config
+        run: |
+         aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region $AWS_REGION
         
-    - name: Set environment variable
-      env:
-        repourl: ${{ vars.PROD_REPO_URL }}
-      run: |
-        sed -i "s#REPO_URL#${repourl}#g" helm/chart/values-prod.yaml    
+      - name: Set environment variable
+        env:
+          repourl: ${{ vars.REPO_URL }}
+        run: |
+          sed -i "s#REPO_URL#${repourl}#g" helm/chart/values.yaml    
 
-    - name: Deploy to EKS       
-      run: |
-        helm upgrade --install nodeapp-prod helm/chart -f helm/chart/values-prod.yaml -n prod --create-namespace --set image.tag=$IMAGE_TAG
-
+      - name: Deploy to EKS       
+        run: |
+          helm upgrade --install nodeapp-dev helm/chart/ -n dev --create-namespace --set image.tag=$IMAGE_TAG
