--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -136,5 +136,9 @@ jobs:
 
       - name: Deploy to EKS       
         run: |
+          VERSION=$(echo ${{ steps.update-version.outputs.new_version }})
+          UPDATE=$(echo ${{ steps.determine-update.outputs.update }})
+
+          IMAGE_TAG="${VERSION}"
           echo "new tag is : $IMAGE_TAG"
           helm upgrade --install nodeapp-dev helm/chart/ -n dev --create-namespace --set image.tag=$IMAGE_TAG
