--- a/Application/package.json
+++ b/Application/package.json
@@ -5,7 +5,12 @@
   "main": "index.js",
   "devDependencies": {
     "jest": "^29.7.0",
-    "semantic-release": "^22.0.5"
+    "semantic-release": "^22.0.5",
+    "@semantic-release/commit-analyzer": "^11.0.0",
+    "@semantic-release/error": "^4.0.0",
+    "@semantic-release/github": "^9.0.0",
+    "@semantic-release/npm": "^11.0.0",
+    "@semantic-release/release-notes-generator": "^12.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
