FEAT: semantic version test

--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -16,19 +16,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - name: Semantic Releasify
+      # You may pin to the exact commit or the version.
+      # uses: d3p1/semantic-releasify@235a884f798d7f845f24cd192c2d67fb08315efd
+        uses: d3p1/semantic-releasify@v1.1.0
         with:
-          node-version: "12.x"
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
-      - run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-      
+        # The branch on which release should happen
+          branch: # optional, default is ${{ github.ref_name }}
+        # The Git tag format used by semantic-release to identify releases
+          tag-format: # optional, default is v${version}
+      - run: echo "version is  ${version}"    
+
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
