--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -16,6 +16,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+
       - name: Semantic Releasify
       # You may pin to the exact commit or the version.
       # uses: d3p1/semantic-releasify@235a884f798d7f845f24cd192c2d67fb08315efd
@@ -26,7 +29,7 @@ jobs:
         # The Git tag format used by semantic-release to identify releases
           tag-format: # optional, default is v${version}
       - run: echo "version is  ${version}"    
-
+      
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
