--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -28,7 +28,10 @@ jobs:
           branch: main
         # The Git tag format used by semantic-release to identify releases
           tag-format: "${version}"
-      - run: echo "version is  ${version}"    
+      - run: echo "version is  ${version}"  
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}  
       
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
