--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -24,8 +24,9 @@ jobs:
 
       - name: Conventional Semantic Release
         working-directory: ./Application # Set the working directory to Application
-        uses: ahmadnassri/action-semantic-release@v2.2.8
+        run: npx semantic-release
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
       
