Test: semantic version testing

--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -1,40 +1,21 @@
 name: sample Test
 
 on:
-  push:
-    branches:
-      - main
-
+    push:
+      branches:
+            - main
+  
 jobs:
-  release:
-    runs-on: ubuntu-latest
+    release:
+      runs-on: ubuntu-latest
+  
+      steps:
+        - name: checkout
+          uses: actions/checkout@v2
+  
+        - name: Conventional Semantic Release
+          uses: ahmadnassri/action-semantic-release@v2.2.8
 
-    steps:
-      - name: checkout
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18' # Set your desired Node.js version here
-
-      - name: Install dependencies
-        working-directory: ./Application # Set the working directory to Application
-        run: npm install
-
-      - name: Conventional Semantic Release
-        working-directory: ./Application
-        run: |
-          npx semantic-release
-          echo "Current version: ${{ steps.current_version.outputs.version }}"
-          echo "Previous version: ${{ steps.previous_version.outputs.version }}"
-          echo "Next version: ${{ steps.next_version.outputs.version }}"
-          echo "Current tag: ${{ steps.current_tag.outputs.tag }}"
-          echo "Previous tag: ${{ steps.previous_tag.outputs.tag }}"
-          echo "Next tag: ${{ steps.next_tag.outputs.tag }}"
-        env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-      
-      
+          env:
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
