--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -15,6 +15,7 @@ jobs:
   
         - name: Conventional Semantic Release
           uses: ahmadnassri/action-semantic-release@v2.2.8
+          working-directory: ./Application
 
           env:
             NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
