--- a/.github/workflows/sample2.yml
+++ b/.github/workflows/sample2.yml
@@ -22,7 +22,7 @@ jobs:
         run: cd Application
 
       - name: Conventional Semantic Release
-        run: npx semantic-release
+        uses: ahmadnassri/action-semantic-release@v2.2.8
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
